fixed scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -97,14 +97,22 @@ h2 {
     width: 10px;
     height: 10px;
 }
+
 ::-webkit-scrollbar-track:vertical {
     background:  linear-gradient(0deg,  rgba(7, 0, 211, 1) 0%, rgb(45, 163, 226) 100%);
 }
+
 ::-webkit-scrollbar-track:horizontal {
     background:  linear-gradient(to left,  rgba(7, 0, 211, 1) 0%, rgb(45, 163, 226) 100%);
 }
-::-webkit-scrollbar-thumb {
+
+::-webkit-scrollbar-thumb:horizontal {
     background: transparent;
     box-shadow: 0px 0px 0px 100000vh black;
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+    background: rgba(255, 255, 255, 0.5);
     border-radius: 20px;
 }
